HAWQ-1487. Fix hang process due to deadlock when it try to process interrupt in error handling